deploy: 954d19d72d3ace749116f7e279aaed1c9aa03a06

--- a/chat.html
+++ b/chat.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Send a message</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="chat.css" rel="stylesheet"></head>
     <body>
@@ -10,8 +11,13 @@
             <button class="material-symbols-outlined back-to-list-chat">
                 arrow_back
             </button>
-            <div class="name_of_chat">
-                Наименование чата
+            <div class="name-of-chat">
+                <div class="name-of-chat-user">
+                    Дженнифер Эшли
+                </div>
+                <div class="name-of-chat-last-visited">
+                    был(а) 1 час назад
+                </div>
             </div>
             <button class="material-symbols-outlined">
                 search
