deploy: f814498229fc65372998208aef51efc2eda74365

--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Send a message</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-<link href="index.css" rel="stylesheet"></head>
-    <body>
-        <section class="header">
-            <button class="material-symbols-outlined">
-                Menu
-            </button>
-            <div class="name_of_page">
-                Мессенджер
-            </div>
-            <button class="material-symbols-outlined">
-                more_vert
-            </button>
-        </section>
-        <section class="list-of-chats">
-            <div class="chat" >
-                <div class="avatar">
-                    <img src="src/static/avataaars.png" class="avatar-user">
-                </div>
-                <div class="name-user-last-message">
-                    <div class="name-of-user">
-                        Дженнифер Эшли
-                    </div>
-                    <div class="last-message">
-                        Ты куда пропал?
-                    </div>
-                </div>
-                <div class="message-time-reading">
-                    <div class="message-time">
-                        15:52
-                    </div>
-                    <div class="reading material-symbols-outlined">
-                        Done_All
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div class="button-create-chat material-symbols-outlined">Edit</div>
-    <script type="text/javascript" src="index.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/Klorestz/2022-2-VK-EDU-FS-Frontend-D-Karasev/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/Klorestz/2022-2-VK-EDU-FS-Frontend-D-Karasev/logo192.png"/><link rel="manifest" href="/Klorestz/2022-2-VK-EDU-FS-Frontend-D-Karasev/manifest.json"/><title>React App</title><script defer="defer" src="/Klorestz/2022-2-VK-EDU-FS-Frontend-D-Karasev/static/js/main.8f322ff5.js"></script><link href="/Klorestz/2022-2-VK-EDU-FS-Frontend-D-Karasev/static/css/main.ba81c013.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
